
Clients:
- Add `-W` timeout support to Windows.
- The `--insecure` option now disables all server certificate verification.
- Fix incorrect output formatting in mosquitto_sub when using field widths
  with `%x` and `%X` for printing the payload in hex.
- Add float printing option to mosquitto_sub.
- Fix `-f` and `-s` options in mosquitto_rr.


2.0.14 - 2021-11-17
===================

Broker:
- Fix bridge not respecting receive-maximum when reconnecting with MQTT v5.

Client library:
- Fix mosquitto_topic_matches_sub2() not using the length parameters.
  Closes #2364.
- Fix incorrect subscribe_callback in mosquittopp.h. Closes #2367.


2.0.13 - 2021-10-27
===================

Broker:
- Fix `max_keepalive` option not being able to be set to 0.
- Fix LWT messages not being delivered if `per_listener_settings` was set to
  true. Closes #2314.
- Various fixes around inflight quota management. Closes #2306.
- Fix problem parsing config files with Windows line endings. Closes #2297.
- Don't send retained messages when a shared subscription is made.
- Fix log being truncated in Windows.
- Fix client id not showing in log on failed connections, where possible.
- Fix broker sending duplicate CONNACK on failed MQTT v5 reauthentication.
  Closes #2339.
- Fix mosquitto_plugin.h not including mosquitto_broker.h. Closes #2350.

Client library:
- Initialise sockpairR/W to invalid in `mosquitto_reinitialise()` to avoid
  closing invalid sockets in `mosquitto_destroy()` on error. Closes #2326.

Clients:
- Fix date format in mosquitto_sub output. Closes #2353.


2.0.12 - 2021-08-31
===================

Security:
- An MQTT v5 client connecting with a large number of user-property properties
  could cause excessive CPU usage, leading to a loss of performance and
  possible denial of service. This has been fixed.
- Fix `max_keepalive` not applying to MQTT v3.1.1 and v3.1 connections.
  These clients are now rejected if their keepalive value exceeds