@@ -1,7 +1,6 @@
 if(SQLITE3_FOUND AND CJSON_FOUND)
 	add_definitions("-DWITH_CJSON")
 	set(CLIENT_INC
-		"${SQLITE3_INCLUDE_DIRS}"
 		"${STDBOOL_H_PATH}"
 		"${STDINT_H_PATH}"
 		"${mosquitto_SOURCE_DIR}"
@@ -9,8 +8,6 @@ if(SQLITE3_FOUND AND CJSON_FOUND)
 		"${mosquitto_SOURCE_DIR}/include"
 		"${mosquitto_SOURCE_DIR}/src"
 	)
-
-	set(CLIENT_DIR "${mosquitto_BINARY_DIR}/lib" "${SQLITE3_DIR}")
 
 	add_library(mosquitto_persist_sqlite MODULE
 		base_msgs.c
@@ -25,7 +22,7 @@ if(SQLITE3_FOUND AND CJSON_FOUND)
 	)
 
 	target_include_directories(mosquitto_persist_sqlite PRIVATE
-		${CLIENT_INC} ${SQLITE3_INCLUDE_DIR}
+		${CLIENT_INC}
 	)
 	link_directories(${CLIENT_DIR} "${mosquitto_SOURCE_DIR}")
 
@@ -34,7 +31,10 @@ if(SQLITE3_FOUND AND CJSON_FOUND)
 		POSITION_INDEPENDENT_CODE 1
 	)
 
-	target_link_libraries(mosquitto_persist_sqlite PRIVATE ${SQLITE3_LIBRARIES})
+	target_link_libraries(mosquitto_persist_sqlite
+		PRIVATE
+			SQLite::SQLite3
+	)
 	if(WIN32)
 		target_link_libraries(mosquitto_persist_sqlite PRIVATE mosquitto)
 	endif()
